--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/PersonalHomepageIcon.png" />
-  <meta property="og:image" content="%PUBLIC_URL%/SocialMediaImage.jpg" />
+  <meta property="og:image" content="%PUBLIC_URL%/fbhomepage.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
